@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-30T00:54:37Z",
-  "count" : 131,
-  "count_minmax" : [ 131, 131 ],
-  "count_decinc" : [ -0, +131 ],
+  "timestamp" : "2024-06-12T00:56:11Z",
+  "count" : 94,
+  "count_minmax" : [ 94, 131 ],
+  "count_decinc" : [ -37, +131 ],
   "uniques" : 3,
   "uniques_minmax" : [ 3, 3 ],
   "uniques_decinc" : [ -0, +3 ]
