@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-06-11T00:56:17Z",
-  "count_outdated" : 211760,
-  "uniques_outdated" : 2087,
-  "count" : 213581,
-  "uniques" : 2116,
+  "timestamp" : "2024-06-12T00:56:11Z",
+  "count_outdated" : 211890,
+  "uniques_outdated" : 2089,
+  "count" : 213710,
+  "uniques" : 2117,
   "clones" : [
     {
-      "timestamp": "2024-05-28T00:00:00Z",
-      "count": 85,
-      "count_minmax": [ 85, 130 ],
-      "count_decinc": [ 45, 130 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
-    {
       "timestamp": "2024-05-29T00:00:00Z",
-      "count": 131,
-      "count_minmax": [ 131, 131 ],
-      "count_decinc": [ 0, 131 ],
+      "count": 94,
+      "count_minmax": [ 94, 131 ],
+      "count_decinc": [ 37, 131 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
@@ -124,6 +115,15 @@
     },
     {
       "timestamp": "2024-06-10T00:00:00Z",
+      "count": 129,
+      "count_minmax": [ 129, 129 ],
+      "count_decinc": [ 0, 129 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-06-11T00:00:00Z",
       "count": 129,
       "count_minmax": [ 129, 129 ],
       "count_decinc": [ 0, 129 ],
