@@ -1,15 +1,10 @@
 {
-  "count": 1776,
-  "uniques": 12,
+  "count": 1783,
+  "uniques": 11,
   "clones": [
     {
-      "timestamp": "2024-05-28T00:00:00Z",
-      "count": 85,
-      "uniques": 2
-    },
-    {
       "timestamp": "2024-05-29T00:00:00Z",
-      "count": 131,
+      "count": 94,
       "uniques": 3
     },
     {
@@ -69,6 +64,11 @@
     },
     {
       "timestamp": "2024-06-10T00:00:00Z",
+      "count": 129,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-06-11T00:00:00Z",
       "count": 129,
       "uniques": 1
     }
