@@ -1,3 +1,12 @@
+2024-06-12T00:56:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9474917017 # 324
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-12
+* notice: last 14d: unq all: 11 1783
+* notice: prev accum: outdated-unq outdated-all / unq all: 2087 211760 / 2116 213581
+* notice: next accum: outdated-unq outdated-all / unq all: 2089 211890 / 2117 213710
+* notice: prev exec diff / last date diff / accum: unq all: +1 +129 -0 -37 / +1 +129 -0 -0 / 1 129
+* notice: removed / changed dates: [2024-05-28] / [2024-05-29 2024-06-11]
+
 2024-06-11T00:56:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9457795293 # 323
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-11
